feat: aplicando contexto de autenticacao

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,8 @@
-DB_HOST = localhost
-DB_PORT = 5432
-DB_USERNAME = programador
-DB_PASSWORD = hidros
-DB_DATABASE = tarefas
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=programador
+DB_PASSWORD=hidros
+DB_DATABASE=tarefas
+
+JWT_SECRET=#jequiladispag@$12
+JWT_EXPIRES_IN=120s
