--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,7 @@ DB_PORT=5432
 DB_USERNAME=programador
 DB_PASSWORD=hidros
 DB_DATABASE=tarefas
+
+
+JWT_SECRET=#jequiladispag@$12
+JWT_EXPIRES_IN=120s
