--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
     "@nestjs/platform-express": "^11.1.1",
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.7.9",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.24",
+    "typeorm-fixtures-cli": "^4.1.0",
     "typeorm-transactional": "^0.5.0"
   },
   "devDependencies": {
