feat: configurando variavel de ambientes

--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,9 @@
+NODE_ENV=development
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=programador
 DB_PASSWORD=hidros
 DB_DATABASE=tarefas
 
-JWT_SECRET=#jequiladispag@$12
+JWT_SECRET="#jequiladispag@$12"
 JWT_EXPIRES_IN=120s
