feat: implement JWT refresh token functionality

--- a/every-money-backend/.env.test
+++ b/every-money-backend/.env.test
@@ -8,3 +8,6 @@ DB_DATABASE=tarefas
 
 JWT_SECRET="#jequiladispag@$12"
 JWT_EXPIRES_IN=120s
+
+JWT_REFRESH_SECRET="#jequiladispag@$7895"
+JWT_REFRESH_EXPIRES_IN=7d
