--- a/every-money-backend/package.json
+++ b/every-money-backend/package.json
@@ -17,7 +17,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --forceExit --passWithNoTests --detectOpenHandles --runInBand --coverage",
+    "test": "jest --forceExit --passWithNoTests --detectOpenHandles --maxWorkers=3 --coverage",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
